src/objects/Letter_Of_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount  Requested by the Organization</description>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Condition__c</fullName>
        <label>Approval Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grant_Request_Date__c</fullName>
        <description>Approximate date when grant funding is requested</description>
        <label>Grant Request Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <description>Primary contact</description>
        <label>Main Contact</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_People_Impacted_by_The_Grant__c</fullName>
        <description>How many people will be impacted by the grant</description>
        <label>Number of People Impacted by The Grant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Description__c</fullName>
        <description>Description of the Organization</description>
        <label>Organization Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>Name of the organization that is requested the grant</description>
        <label>Organization Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program_Description_For_The_Grant__c</fullName>
        <description>Program description for which the organization seeks a grant</description>
        <label>Program Description For The Grant</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualified_Tax_Exempt_NGO_501c3_IRS__c</fullName>
        <description>Currently qualified as a tax exempt non-profit public charity per section 501 (c) 3 of the IRS</description>
        <label>Qualified Tax Exempt NGO 501c3 IRS</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Number, Street Name, Office Number. Complete mail address</description>
        <label>Street Address</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <description>Valid website</description>
        <label>Website URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Letter Of Interest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Main_Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Grant_Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GR#-{00000}</displayFormat>
        <label>Grant Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letters Of Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>